--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,10 @@
 }
 
 html, body {
+    width: 100%;
     margin: 0;
     font-size: 62.5%;
+    line-height: 1.6;
 }
 
 body {
@@ -25,6 +27,7 @@ body {
 }
 
 h1 {
+    margin: 0 0 2.4rem;
     font-size: 3.6rem;
     font-weight: 400;
 }
@@ -42,18 +45,28 @@ h3 {
     color: hsl(332, 51%, 32%);
 }
 
+header {
+    max-width: 100%;
+    margin: 3rem auto 0;
+}
+
 hr {
     margin-top: 2.5rem;
 }
 
 main {
-    padding: 3.2rem;
     background-color: hsl(0, 0%, 100%);
+    width: 100%;
+    padding: 0 2.8rem 1.4rem;
 }
 
 p, li, span, table td {
     font-family: "Outfit", sans-serif;
     font-size: 1.6rem;
+}
+
+p.intro {
+    margin-bottom: 2rem;
 }
 
 section.nutrition {
@@ -62,6 +75,7 @@ section.nutrition {
 
 section.preparation-info {
     padding: 2rem;
+    border-radius: 15px;
     background-color: hsl(330, 100%, 98%);
 }
 
@@ -117,7 +131,7 @@ ol.instructions-list {
 }
 
 ol.instructions-list li {
-    padding-left: 3rem;
+    padding-left: 1.4rem;
     margin-bottom: 1rem;
 }
 
@@ -131,8 +145,11 @@ ol.instructions-list li {
 }
 
 .banner-image {
-    width: 100%;
+    width: 100vw;
     height: auto;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    display: block;
 }
 
 span.bold {
@@ -141,9 +158,24 @@ span.bold {
 
 /* MEDIA QUERIES */
 @media (min-width: 528px) {
+
+}
+
+@media (min-width: 1440px) {
     body {
         max-width: 50%;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    main {
+        margin-top: 8rem;
+        padding-top: 2.8rem;
+        border-radius: 15px;
+    }
+
+    .banner-image {
+        max-width: 100%;
+        border-radius: 15px;
     }
 }
